@@ -1,46 +1,41 @@
 package Pedro.Artur.BackendDesafioLeds.service;
 
 import Pedro.Artur.BackendDesafioLeds.dtos.CandidatoResponseDTO;
+import Pedro.Artur.BackendDesafioLeds.dtos.ConcursoResponseDTO;
+import Pedro.Artur.BackendDesafioLeds.exception.NotFoundCpfException;
 import Pedro.Artur.BackendDesafioLeds.mapper.CandidatoMapper;
 import Pedro.Artur.BackendDesafioLeds.model.Candidato;
-import Pedro.Artur.BackendDesafioLeds.model.Concurso;
 import Pedro.Artur.BackendDesafioLeds.repository.CandidatoRepository;
-import Pedro.Artur.BackendDesafioLeds.repository.ConcursoRepository;
+import Pedro.Artur.BackendDesafioLeds.utils.CpfUtils;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
+
 
 @Service
 public class CandidatoService {
     public final CandidatoRepository candidatoRepository;
-    public final ConcursoRepository concursoRepository;
 
-    public CandidatoService(CandidatoRepository candidatoRepository, ConcursoRepository concursoRepository) {
+    public CandidatoService(CandidatoRepository candidatoRepository) {
         this.candidatoRepository = candidatoRepository;
-        this.concursoRepository = concursoRepository;
     }
 
     public Candidato salvar(Candidato candidato){
         return candidatoRepository.save(candidato);
     }
 
-    public Candidato BuscarPorCpf(String cpf){
-        return candidatoRepository.findByCpf(cpf);
+    public Candidato buscarPorCpf(String cpf){
+        Candidato candidato = candidatoRepository.findByCpf(CpfUtils.limpar(cpf));
+        if(candidato == null){
+            throw new NotFoundCpfException();
+        }
+        return candidato;
     }
 
-    public List<CandidatoResponseDTO> BuscarCandidatosCompativeis(Long codigo){
-        List<Concurso> concursos = concursoRepository.findByCodigo(codigo);
-
-        Set<String> profissoes = concursos.stream()
-                .flatMap(concurso -> concurso.getProfissoes().stream())
-                .collect(Collectors.toSet());
-
-        List<Candidato> candidatos = candidatoRepository.BuscarCandidatosCompativeis(profissoes);
-
-        return candidatos.stream()
-                .map(CandidatoMapper::toDTO)
-                .collect(Collectors.toList());
+    public List<CandidatoResponseDTO> buscarPorProfissoes(Set<String> profissoes){
+        List<Candidato> candidatos = candidatoRepository.buscarCandidatosCompativeis(profissoes);
+        return candidatos.stream().map(CandidatoMapper::toDTO).toList();
     }
+
 }
